# call_analysis_service

./: config.py  loggers.py  pyproject.toml
analysis_handler/: gpt_handler.py  main.py
call_handler/: main.py  rest_bitrix_get.py  rest_bitrix_post.py
db/: db_analysis_data.py  db_call_data.py  db_connector.py  db_user_data.py  db_utils.py
transcribe_handler/: main.py  utils.py
